--- a/rep01.html
+++ b/rep01.html
@@ -22,7 +22,7 @@
 <body>
   <div class=header>
     <h1>1週目のレポート ： 公大高専１年実習I-1</h1>
-    <div>〇〇班〇〇番 ニックネーム</div>
+    <div>1a班21番 結石敏矢</div>
   </div>
   <div class=1week>
     <h2>第1週目</h2>
@@ -62,7 +62,7 @@
     
   </div>
   <div class=footer>
-    作成日：20YY年MM月DD日
+    作成日：2023年07月12日
   </div>
 </body>
 </html>
