--- a/index.html
+++ b/index.html
@@ -28,19 +28,19 @@
     <div>
       <h2>クラブ</h2>
       <div>
-        水泳部
+        ダンス部
       </div>
     </div>
 
     <div>
       <h2>趣味</h2>
       <div>
-        youtube
+        youtube、音楽鑑賞（好きな曲はotinpotinpoの以珍伝珍）
       </div>
     </div>
   </div>
   <div class=footer>
-    20YY/MM/DD
+    2023/07/12
   </div>
 </body>
 </html>
