--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div>
       <h2>趣味</h2>
       <div>
-        youtube、音楽鑑賞（好きな曲はotinpotinpoの以珍伝珍）
+        youtube、音楽鑑賞
       </div>
     </div>
   </div>
