--- a/rep01.html
+++ b/rep01.html
@@ -42,9 +42,9 @@
       <img src="game.png" alt="game.png" width="50%" height="50%">
       <div>
         1.内容<br>
-        ないようないよう<br>
+        上から降ってくるリンゴを、キャラクターを左右に動かして点を稼ぐゲームのプログラムを作成した。また、スペースキーを押すとジャンプ動作が行えるようにした。<br>
         2.感想<br>
-        かんそうかんそう<br>        
+        プレイヤーの操作に従って動くゲームのプログラムを自分で作れたという点に驚いた。また、プログラムには無駄な点がなく全て必要なもので構成されていて面白いと思った。<br>        
       </div>
     </div>
 
@@ -54,9 +54,9 @@
         <!-- 下のyourIDを 自分のIDに書き替える↓ -->
         <a href="https://Varokron.github.io/web2023/">私のホームページ</a><br>
         1.内容<br>
-        ないようないよう<br>
+        <br>
         2.感想<br>
-        かんそうかんそう<br>        
+        <br>        
       </div>      
     </div>
     
