--- a/rep01.html
+++ b/rep01.html
@@ -54,9 +54,9 @@
         <!-- 下のyourIDを 自分のIDに書き替える↓ -->
         <a href="https://Varokron.github.io/web2023/">私のホームページ</a><br>
         1.内容<br>
-        <br>
+        自身のプロフィールに変更したサイトのリンクをレポートに張り付けた。<br>
         2.感想<br>
-        <br>        
+        自分だけのサイトにいつでもアクセスできて、驚いた。<br>        
       </div>      
     </div>
     
