--- a/rep02.html
+++ b/rep02.html
@@ -31,9 +31,9 @@
       <a href="https://varokron.github.io/web2023/rep01.html">１週目のレポート</a><br>
       <div>
         1.内容<br>
-        ないようないよう<br>
+        前回のレポートのリンクを作成し、貼り付けた。<br>
         2.感想<br>
-        かんそうかんそう<br>
+        自分のサイトやレポートのリンクを貼り付けることで、誰でも簡単にアクセスできることに驚いた。<br>
       </div>
     </div>
 
@@ -42,9 +42,9 @@
       <img src="ml.png" alt="ML" width="50%" height="50%">
       <div>
         1.内容<br>
-        ないようないよう<br>
+        欠席<br>
         2.感想<br>
-        かんそうかんそう<br>        
+        欠席<br>        
       </div>
     </div>
     
@@ -53,9 +53,10 @@
       <img src="wroom.png" alt="ML" width="50%" height="50%">
       <div>
         1.内容<br>
-        ないようないよう<br>
+        VRゴーグルを装着し、仮想世界内で会議室に参加した。<br>
         2.感想<br>
-        かんそうかんそう<br>
+        現実かのように視界が広がっていて、腕を振ったり文字を書いたりすることができて面白かった。<br>
+        また、自分の動きに連動して動くところがまさに仮想現実であるなと感じた。<dr>
       </div>
     </div>
     
