--- a/rep01.html
+++ b/rep01.html
@@ -44,7 +44,8 @@
         1.内容<br>
         上から降ってくるリンゴを、キャラクターを左右に動かして点を稼ぐゲームのプログラムを作成した。また、スペースキーを押すとジャンプ動作が行えるようにした。<br>
         2.感想<br>
-        プレイヤーの操作に従って動くゲームのプログラムを自分で作れたという点に驚いた。また、プログラムには無駄な点がなく全て必要なもので構成されていて面白いと思った。<br>        
+        プレイヤーの操作に従って動くゲームのプログラムを自分で作れたという点に驚いた。<dr>
+        また、プログラムには無駄な点がなく全て必要なもので構成されていて面白いと思った。<br>        
       </div>
     </div>
 
@@ -54,7 +55,7 @@
         <!-- 下のyourIDを 自分のIDに書き替える↓ -->
         <a href="https://Varokron.github.io/web2023/">私のホームページ</a><br>
         1.内容<br>
-        自身のプロフィールに変更したサイトのリンクをレポートに張り付けた。<br>
+        自身のプロフィールに変更したサイトのリンクをレポートに貼り付けた。<br>
         2.感想<br>
         自分だけのサイトにいつでもアクセスできて、驚いた。<br>        
       </div>      
