--- a/rep03.html
+++ b/rep03.html
@@ -31,9 +31,10 @@
       <a href="https://varokron.github.io/web2023/vr.html">自作した３次元空間</a><br>                                   
       <div>
         1.内容<br>
-        ないようないよう<br>
+        webプログラミング道場を使ってプログラムを作成し、仮想空間内にオブジェクトを配置した。<br>
         2.感想<br>
-        かんそうかんそう<br>
+        ただの文字列であったものが、実行してみると球体になったり円柱に変化したりして、プログラムは面白いと思った。<br>
+        また、カラーコードを入力することで微細な色の変化を表現する事ができ、興味深かった。<dr>
       </div>
     </div>
     <div>
@@ -42,9 +43,9 @@
       <a href="https://varokron.github.io/web2023/dengon.html">伝言板</a><br>                                   
       <div>
         1.内容<br>
-        ないようないよう<br>
+        webプログラミング道場を使い、入力した文字を残すことのできるプログラムを作成した。<br>
         2.感想<br>
-        かんそうかんそう<br>
+        全てのプログラムに意味があり、ボタンや入力バーといった物も作成することができて驚いた。<br>
       </div>
     </div>
 
@@ -53,9 +54,9 @@
       <img src="interactive.png" alt="JavaScript" width="20%" height="20%"><br>      
       <div>
         1.内容<br>
-        ないようないよう<br>
+        VRゴーグルを装着し、3次元空間内で物体を動かしたりボールを射出する体験を行った。<br>
         2.感想<br>
-        かんそうかんそう<br>
+        自分の動かした通りに物体が動き、画面内を360度見回しても空間が存在するのは新鮮味があってとても楽しかった。<br>
       </div>
     </div>
   
