--- a/rep01.html
+++ b/rep01.html
@@ -45,7 +45,7 @@
         上から降ってくるリンゴを、キャラクターを左右に動かして点を稼ぐゲームのプログラムを作成した。また、スペースキーを押すとジャンプ動作が行えるようにした。<br>
         2.感想<br>
         プレイヤーの操作に従って動くゲームのプログラムを自分で作れたという点に驚いた。<dr>
-        また、プログラムには無駄な点がなく全て必要なもので構成されていて面白いと思った<br>        
+        また、プログラムには無駄な点がなく全て必要なもので構成されていて面白いと思った。<br>        
       </div>
     </div>
 
