--- a/rep02.html
+++ b/rep02.html
@@ -42,9 +42,10 @@
       <img src="ml.png" alt="ML" width="50%" height="50%">
       <div>
         1.内容<br>
-        欠席<br>
+        グー、チョキ、パー、何もしていない状態の4パターンのサンプルを用意し、どの状態か判別できるようにする。<br>
         2.感想<br>
-        欠席<br>        
+        機械は人間のように臨機応変な対応はできないものの、大量のサンプルやデータがあれば現在の状態がどのようなものか判別することができることに驚いた。<br>
+        また、コロナウイルスが蔓延していた時に、その空間に居る人々の体温を機械がチェックしてクラスターのリスクを抑えるといった試みが行われていたが、それも一定以上の体温は危険というサンプルを用意することで判断させているものなのではと考えた。<br>
       </div>
     </div>
     
